# commit5

./: .gitignore  Dockerfile  Pipfile  README.md  pyproject.toml  requirements.txt
commit5/: app.py  pyproject.toml
commit5/docker/: .dockerignore  Dockerfile  api.py  download_tokenizer.py  generator.py  requirements.txt
commit5/tests/: test_generate.py  test_server.py
core/: api.py
notebooks/: codebert-large.ipynb  codebert.ipynb  fastt5.ipynb  optimize-onnx.ipynb  optimize.ipynb  quantize.ipynb
scripts/: download_tokenizer.py  generator.py  test_commit.py  test_generate.py
