[tool.poetry]
name = "commit-t5"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.28.1"
accelerate = "^0.19.0"
sentencepiece = "^0.1.99"
torch = "^2.0.1"
torchvision = "^0.15.2"
torchaudio = "^2.0.2"

[tool.poetry.dev-dependencies]
ipykernel = "^6.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
