[project]
name = "commit5"
description = "Locally generate commit messages using CodeTrans and FastT5"
readme = "README.md"
version = "0.1.1"
authors = [
    { name = "Kevin Lu", email = "kevinlu1248@gmail.com" }
]
dependencies = [
    "docker",
    "typer",
    "requests"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "flit",
    "twine"
]

[tool.setuptools]
py-modules = ["app"]

[project.scripts]
commit5 = "app:app"

[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "app"